# psf-modeling

./: .gitignore  PSF_HST.py  PSF_JWST.py  README.md  environment.yml  others_PSF.py  pyproject.toml  view_PSF.py
scripts/: apply_jwst_psf_to_scene.py  apply_psfs_to_scene.py  generate_jwst_pupil.py  generate_synthetic_scene.py  render_jwst_figure.py
src/psf_modeling/: __init__.py  observation.py  plotting.py  psf.py  pupil.py  scene.py
tests/: test_observation.py  test_psf.py  test_pupil.py  test_scene.py
